k8s_base/special/aws/website/website.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
    service: website
  name: website
  namespace: website
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: website
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    link.argocd.argoproj.io/external-link: https://www.nuts.frank5.link
  labels:
    app: website
    version: v1
  name: website
  namespace: website
spec:
  selector:
    matchLabels:
      app: website
      version: v1
  template:
    metadata:
      labels:
        app: website
        version: v1
    spec:
      containers:
      - image: nginx:1.13.0-alpine
        imagePullPolicy: IfNotPresent
        name: website
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: nginx-html
          readOnly: true
        - mountPath: /var/log/nginx
          name: log
      volumes:
      - configMap:
          name: nginx-html
        name: nginx-html
      - emptyDir: {}
        name: log
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gitea-gateway-tcp
  namespace: website
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: tcp-gitea-ssh
      number: 32022
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
  namespace: website
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - www.nuts.frank5.link
    - leasing.nuts.frank5.link
    - argocd2.nuts.frank5.link
    - kiali.nuts.frank5.link
    - prometheus.nuts.frank5.link
    - grafana.nuts.frank5.link
    - tracing.nuts.frank5.link
    port:
      name: http2
      number: 80
      protocol: HTTP2
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: https-gateway
  namespace: website
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - www.nuts.frank5.link
    - leasing.nuts.frank5.link
    - argocd2.nuts.frank5.link
    - kiali.nuts.frank5.link
    - prometheus.nuts.frank5.link
    - grafana.nuts.frank5.link
    - tracing.nuts.frank5.link
    port:
      name: https-tls
      number: 443
      protocol: HTTPS
    tls:
      credentialName: website-tls
      mode: SIMPLE
  - hosts:
    - dashboard.nuts.frank5.link
    port:
      name: https-passthrough
      number: 443
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd2
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - argocd2.nuts.frank5.link
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
  namespace: website
spec:
  gateways:
  - https-gateway
  hosts:
  - dashboard.nuts.frank5.link
  tls:
  - match:
    - port: 443
      sniHosts:
      - dashboard.nuts.frank5.link
    route:
    - destination:
        host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
        port:
          number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitea
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - gitea.nuts.yantao0527.me
  http:
  - route:
    - destination:
        host: git-gitea-http.git.svc.cluster.local
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitea-tcp
  namespace: website
spec:
  gateways:
  - gitea-gateway-tcp
  hosts:
  - '*'
  tcp:
  - match:
    - port: 32022
    route:
    - destination:
        host: git-gitea-ssh.git.svc.cluster.local
        port:
          number: 32022
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - grafana.nuts.frank5.link
  http:
  - route:
    - destination:
        host: grafana.jx-observability.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - kiali.nuts.frank5.link
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - prometheus.nuts.frank5.link
  http:
  - route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - tracing.nuts.frank5.link
  http:
  - route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: website
  namespace: website
spec:
  gateways:
  - http-gateway
  - https-gateway
  hosts:
  - www.nuts.frank5.link
  http:
  - route:
    - destination:
        host: website.website.svc.cluster.local
        port:
          number: 80
